# MLOps_HW1

./: Dockerfile  Makefile  README.md  perf.py  pyproject.toml  setup.py
MeanSquaredError/: __init__.py
MeanSquaredError/python/: bindings.cpp
MeanSquaredError/src/: mean_squared_error.cpp  mean_squared_error.h
MeanSquaredError/tests/: test_mse.cpp
