[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MeanSquaredError"
version = "0.1"
authors = [{name = "Riabinin Evgeny", email="riabinin.ev@phystech.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
['version']

[tool.setuptools]
packages = ["MeanSquaredError"]

[tool.setuptools.package-data]
MeanSquaredError = [
    "python/*.so"
]
